--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 
     <script>
         // METS TA CLÉ ICI ENTRE LES GUILLEMETS
-        const API_KEY = "TA_CLE_GROQ_ICI"; 
+        const API_KEY = "gsk_CrgZ9aI8p2jrtas3gwRdWGdyb3FYnqS9kInNUg87Mu"; 
         
         let user = { name: "", age: "" };
 
